--- a/webapp/i18n/i18n_ko.properties
+++ b/webapp/i18n/i18n_ko.properties
@@ -179,6 +179,8 @@ LABEL_00273 = 확인사유
 LABEL_00274 = 월 근무실적 :
 LABEL_00275 = 잔여보상휴가\n(누적)
 LABEL_00276 = 퇴직프로세스\n퇴직일
+LABEL_00277 = 단위기간\n주차
+LABEL_00278 = 합계\n근무시간
 
 
 
